fixed navbar on small

--- a/public/stylesheets/media-small.css
+++ b/public/stylesheets/media-small.css
@@ -4,7 +4,7 @@
 */
 
 #topNavbar {
-    height: 120px;
+    height: 125px;
     overflow: hidden;
     overflow-y: auto;
 }
